added new colors, new fonts, and font colors

--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 body {
-  background-image: url(./Images/lightgreen.jpg);
+  background-color: #80C2AF;
 }
 footer {
   border-top: 5px solid rgb(23, 162, 184);
 }
-h1,
-h2 {
+h1, h2 {
   font-family: "Playfair Display", serif;
+  color: #202C39;
 }
 img {
   height: 350px;
   width: 350px;
+}
+.jumbotron {
+    background-color: #F29559 ;
+}
+.navbar {
+    background-color: #F29559;
 }
 p {
   font-family: "Cormorant Garamond", serif;
@@ -25,8 +31,9 @@ p {
   width: 200px;
   border-radius: 50%;
 }
-#name {
+#name, #linked, #resume{
   font-family: "Playfair Display", serif;
+  color: #202C39;
 }
 @media screen and (max-width: 768px) {
   .row {
